--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -5,13 +5,16 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
 
-li {
-    border: 2px solid var(--nav-border-color);
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    text-align: center;
+    li {
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        text-align: center;
+
+        &:not(:last-child) {
+          border-right: 1px solid var(--nav-border-color);
+        }
+    }
 }
