--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         @for (route of appRoutes; track route; let index = $index) {
-            <li [routerLink]='route.path'>Step {{ index + 1 }}</li>
+            <li [routerLink]='route.path' [id]='route.path'>{{ route.title }}</li>
         }
     </ul>
 </nav>
