fix httpclient error, add debug logs, new models

--- a/src/app/feature/car-config/step-1/step-1.component.html
+++ b/src/app/feature/car-config/step-1/step-1.component.html
@@ -1,1 +1,5 @@
-<p>model-and-color-step works!</p>
+<h1>Step 1: Choose your Model and Color</h1>
+<label for="modelSelect">Model:</label>
+<select name="modelSelect" id="modelSelect">
+    
+</select>
