--- a/src/app/feature/car-config/step-1/step-1.component.html
+++ b/src/app/feature/car-config/step-1/step-1.component.html
@@ -1,5 +1,7 @@
 <h1>Step 1: Choose your Model and Color</h1>
 <label for="modelSelect">Model:</label>
 <select name="modelSelect" id="modelSelect">
-    
+    @for (vehicle of (vehicles | async); track vehicle.code) {
+        <option [value]="vehicle.code">{{ vehicle.description }}</option>
+    }
 </select>
