--- a/src/app/feature/car-config/step-1/step-1.component.html
+++ b/src/app/feature/car-config/step-1/step-1.component.html
@@ -1,17 +1,17 @@
 <h1>Step 1: Choose your Model and Color</h1>
-<form>
+<form [formGroup]='step1Form'>
     <label for='modelSelect'>Model:</label>
-    <select name='modelSelect' id='modelSelect' [(ngModel)]='selectedVehicle'>
+    <select name='modelSelect' id='modelSelect' formControlName='modelSelect'>
         <option [ngValue]='undefined' selected>Choose...</option>
         @for (vehicle of (vehicles | async); track vehicle.code) {
             <option [ngValue]='vehicle'>{{ vehicle.description }}</option>
         }
     </select>
-    @if (selectedVehicle) {
+    @if (modelSelect.value) {
         <label for='colorSelect'>Color: </label>
-        <select name='colorSelect' id='colorSelect'>
-            @for (color of selectedVehicle!.colors; track color.code) {
-                <option [value]='color.code'>{{ color.description }}</option>
+        <select name='colorSelect' id='colorSelect' formControlName='colorSelect'>
+            @for (color of modelSelect.value!.colors; track color.code) {
+                <option [ngValue]='color'>{{ color.description }}</option>
             }
         </select>
     }
