add image to step 1, improve readability

--- a/src/app/feature/car-config/step-1/step-1.component.html
+++ b/src/app/feature/car-config/step-1/step-1.component.html
@@ -14,5 +14,6 @@
                 <option [ngValue]='color'>{{ color.description }}</option>
             }
         </select>
+        <img [src]='fetchVehicleImageUrl()' />
     }
 </form>
