--- a/src/app/feature/car-config/step-2/step-2.component.html
+++ b/src/app/feature/car-config/step-2/step-2.component.html
@@ -1,1 +1,10 @@
-<h2>Step 2: Select config and options</h2>
+<h1>Step 2: Select config and options</h1>
+<form [formGroup]='step2FormGroup'>
+    <label for='configSelect'>Config: </label>
+    <select name='configSelect' id='configSelect' formControlName='configsSelect'>
+        <option [ngValue]='null'>Choose...</option>
+        @for (config of (vehicleSetup$ | async)?.configs; track config.id) {
+            <option [ngValue]='config'>{{ config.description }}</option>
+        }
+    </select>
+</form>
