--- a/src/app/feature/car-config/step-1/step-1.component.html
+++ b/src/app/feature/car-config/step-1/step-1.component.html
@@ -1,7 +1,7 @@
 <h1>Step 1: Choose your Model and Color</h1>
 <form [formGroup]='step1FormGroup'>
     <label for='modelSelect'>Model:</label>
-    <select name='modelSelect' id='modelSelect' formControlName='modelSelect'>
+    <select name='modelSelect' id='modelSelect' formControlName='modelSelect' [compareWith]="compareFn">
         <option [ngValue]='null'>Choose...</option>
         @for (vehicle of (vehicles$ | async); track vehicle.code) {
             <option [ngValue]='vehicle'>{{ vehicle.description }}</option>
