remove unneeded css files, add usd pipe

--- a/src/app/feature/car-config/step-2/step-2.component.html
+++ b/src/app/feature/car-config/step-2/step-2.component.html
@@ -8,6 +8,10 @@
         }
     </select>
     @if (configSelect) {
-        <span>Range: {{ configSelect.range }} miles, Max Speed: {{ configSelect.speed }}, </span>
+        <span>
+            Range: {{ configSelect.range }} miles, 
+            Max Speed: {{ configSelect.speed }}, 
+            Cost: {{ configSelect.price | usd }}
+        </span>
     }
 </form>
