--- a/src/app/feature/car-config/step-2/step-2.component.html
+++ b/src/app/feature/car-config/step-2/step-2.component.html
@@ -6,7 +6,7 @@
         @for (config of (vehicleOptions$ | async)?.configs; track config.id) {
             <option [ngValue]='config'>{{ config.description }}</option>
         }
-    </select>
+    </select><br />
     @if (configSelect) {
         <span>
             Range: {{ configSelect.range }} miles, 
