--- a/src/app/feature/car-config/step-3/step-3.component.html
+++ b/src/app/feature/car-config/step-3/step-3.component.html
@@ -8,11 +8,7 @@
         </tr>
         <tr>
             <td>
-                <span>
-                    Range: {{ configAndExtras.config.range }} miles, 
-                    Max Speed: {{ configAndExtras.config.speed }}, 
-                    Cost: {{ configAndExtras.config.price | usd }}
-                </span>
+                <app-vehicle-specs [config]='configAndExtras.config'></app-vehicle-specs>
             </td>
             <td></td>
         </tr>
