selectively show cost on vehicle-specs component

--- a/src/app/feature/car-config/step-3/step-3.component.html
+++ b/src/app/feature/car-config/step-3/step-3.component.html
@@ -8,7 +8,7 @@
         </tr>
         <tr>
             <td>
-                <app-vehicle-specs [config]='configAndExtras.config'></app-vehicle-specs>
+                <app-vehicle-specs [config]='configAndExtras.config' [showCost]='false'></app-vehicle-specs>
             </td>
             <td></td>
         </tr>
