--- a/src/app/feature/car-config/step-3/step-3.component.html
+++ b/src/app/feature/car-config/step-3/step-3.component.html
@@ -1,7 +1,7 @@
 <h1>Step 3: Summary</h1>
 <h3>Your Tesla {{ modelAndColor.model.description }}</h3>
 <div>
-    <table style="border: none;">
+    <table style='border: none;'>
         <tr>
             <td>
                 <strong>{{ configAndExtras.config.description }}</strong>
@@ -19,6 +19,22 @@
                 <strong>{{ modelAndColor.color.description }}</strong>
             </td>
             <td>{{ modelAndColor.color.price | usd }}</td>
+        </tr>
+        @if (configAndExtras.towHitch) {
+            <tr>
+                <td>Tow Hitch Package</td>
+                <td>{{ towHitchPrice | usd }}</td>
+            </tr>
+        }
+        @if (configAndExtras.yoke) {
+            <tr>
+                <td>Yoke Steering Wheel Package</td>
+                <td>{{ yokePrice | usd }}</td>
+            </tr>
+        }
+        <tr style='border-top: 1px solid;'>
+            <td>TOTAL</td>
+            <td>{{ totalPrice | usd }}</td>
         </tr>
     </table>
     <br />
