--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
-    <ul>
+    <div>
         @for (route of appRoutes; track route; let index = $index) {
-            <li [routerLink]='route.path' [id]='route.path'>{{ route.title }}</li>
+            <button [routerLink]='route.path' [id]='route.path'>{{ route.title }}</button>
         }
-    </ul>
+    </div>
 </nav>
