use signals for price calc

--- a/src/app/feature/car-config/step-3/step-3.component.html
+++ b/src/app/feature/car-config/step-3/step-3.component.html
@@ -34,7 +34,7 @@
         }
         <tr style='border-top: 1px solid;'>
             <td>TOTAL</td>
-            <td>{{ totalPrice | usd }}</td>
+            <td>{{ totalPrice() | usd }}</td>
         </tr>
     </table>
     <br />
