--- a/src/app/feature/steps/components/step-2/step-2.component.html
+++ b/src/app/feature/steps/components/step-2/step-2.component.html
@@ -3,7 +3,7 @@
     <label for="configSelect">Config: </label>
     <select name="configSelect" id="configSelect" formControlName="configSelect" [compareWith]="selectCompareFn">
         <option [ngValue]="null">Choose...</option>
-        @for (config of vehicleOptions?.configs; track config.id) {
+        @for (config of availableConfigAndOptions?.configs; track config.id) {
             <option [ngValue]="config">{{ config.description }}</option>
         }
     </select>
@@ -11,12 +11,12 @@
     <app-vehicle-specs [config]="configSelect ?? undefined"></app-vehicle-specs>
     <br />
     @if (configSelect) {
-        @if (vehicleOptions?.towHitch) {
+        @if (availableConfigAndOptions?.towHitch) {
             <label for="includeTowHitch">Tow Hitch?</label>
             <input type="checkbox" name="includeTowHitch" id="includeTowHitch" formControlName="includeTowHitch" />
             <br />
         }
-        @if (vehicleOptions?.yoke) {
+        @if (availableConfigAndOptions?.yoke) {
             <label for="includeYoke">Yoke Steering Wheel?</label>
             <input type="checkbox" name="includeYoke" id= "includeYoke" formControlName="includeYoke" />
         }
